Feat: Create Contact page and update navigation link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a href="#industries">Industries</a>
                 <a href="#use-cases">Use Cases</a>
                 <a href="#faq">FAQ</a>
-                <a href="mailto:hello@nyra.ai">Contact</a>
+                <a href="contact.html">Contact</a>
             </nav>
             <a href="#signup" class="btn btn-primary btn-nav">Join Waitlist</a>
         </div>
