Content: Update contact email to olgu@usenyra.com

--- a/contact.html
+++ b/contact.html
@@ -143,8 +143,8 @@
                     </svg>
                     <div>
                         <p style="color: #fff; margin-bottom: 8px;">Email Us</p>
-                        <a href="mailto:hello@nyra.ai"
-                            style="color: var(--primary); text-decoration: none;">hello@nyra.ai</a>
+                        <a href="mailto:olgu@usenyra.com"
+                            style="color: var(--primary); text-decoration: none;">olgu@usenyra.com</a>
                     </div>
                 </div>
 
