--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                         <a href="#">About Us</a>
                         <a href="#">Careers</a>
                         <a href="#">Blog</a>
-                        <a href="mailto:hello@nyra.ai">Contact</a>
+                        <a href="mailto:olgu@usenyra.com">Contact</a>
                     </div>
                 </div>
 
