Fix: Make navbar sticky on all pages and ensure logo always links to homepage

--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
 <body>
     <header class="navbar">
         <div class="container">
-            <a href="/" class="logo" style="text-decoration: none;">
+            <a href="/index.html" class="logo" style="text-decoration: none;">
                 <span class="logo-text">NYRA</span>
                 <span class="logo-tagline">Influencer Intelligence</span>
             </a>
@@ -233,6 +233,8 @@
             </div>
         </div>
     </footer>
+
+    <script type="module" src="./main.js"></script>
 </body>
 
 </html>
