--- a/post.html
+++ b/post.html
@@ -284,7 +284,7 @@
 <body>
     <header class="navbar">
         <div class="container">
-            <a href="/" class="logo" style="text-decoration: none;">
+            <a href="/index.html" class="logo" style="text-decoration: none;">
                 <span class="logo-text">NYRA</span>
                 <span class="logo-tagline">Influencer Intelligence</span>
             </a>
