Fix: Make homepage logo clickable to scroll to top

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 <body>
     <header class="navbar">
         <div class="container">
-            <div class="logo">
+            <a href="#home" class="logo" style="text-decoration: none;">
                 <span class="logo-text">NYRA</span>
                 <span class="logo-tagline">Influencer Intelligence</span>
-            </div>
+            </a>
             <nav class="nav-links">
                 <a href="#solutions">Solutions</a>
                 <a href="#industries">Industries</a>
