Content: Update Use Cases to showcase 4-step prompt-based cycle with forecasting and intelligence

--- a/index.html
+++ b/index.html
@@ -246,39 +246,40 @@
             <div class="container">
                 <div class="section-header text-center">
                     <span class="badge">Use Cases</span>
-                    <h2>Built for Result-Driven B2B Teams</h2>
-                    <p class="lead">Credibility is the new currency. Here's how to spend it.</p>
+                    <h2>From Prompt to Performance in 4 Steps</h2>
+                    <p class="lead">Tell us what you need. We match, forecast, and optimize—so you know exactly what to
+                        expect before you commit.</p>
                 </div>
 
                 <div class="console-wrapper glass-dark">
                     <!-- Left: Menu -->
                     <div class="console-menu">
-                        <div class="menu-item active" data-id="gtm">
-                            <span class="icon">➔</span>
+                        <div class="menu-item active" data-id="prompt">
+                            <span class="icon">1</span>
                             <div class="meta">
-                                <h3>GTM Strategy</h3>
-                                <p>Launch with precision.</p>
+                                <h3>You Prompt</h3>
+                                <p>Share what you need.</p>
                             </div>
                         </div>
-                        <div class="menu-item" data-id="launch">
-                            <span class="icon">➔</span>
+                        <div class="menu-item" data-id="match">
+                            <span class="icon">2</span>
                             <div class="meta">
-                                <h3>Product Launch</h3>
-                                <p>Get technical validation.</p>
+                                <h3>We Match</h3>
+                                <p>Ranked by fit & authority.</p>
                             </div>
                         </div>
-                        <div class="menu-item" data-id="thought">
-                            <span class="icon">➔</span>
+                        <div class="menu-item" data-id="interact">
+                            <span class="icon">3</span>
                             <div class="meta">
-                                <h3>Thought Leadership</h3>
-                                <p>Own the narrative.</p>
+                                <h3>You Interact</h3>
+                                <p>Like, skip, or activate.</p>
                             </div>
                         </div>
-                        <div class="menu-item" data-id="reputation">
-                            <span class="icon">➔</span>
+                        <div class="menu-item" data-id="adapt">
+                            <span class="icon">4</span>
                             <div class="meta">
-                                <h3>Reputation</h3>
-                                <p>Build trust at scale.</p>
+                                <h3>We Adapt</h3>
+                                <p>Real-time learning.</p>
                             </div>
                         </div>
                     </div>
