--- a/index.html
+++ b/index.html
@@ -245,41 +245,41 @@
         <section class="use-cases-interactive reveal-on-scroll" id="use-cases">
             <div class="container">
                 <div class="section-header text-center">
-                    <span class="badge">Use Cases</span>
-                    <h2>From Prompt to Performance in 4 Steps</h2>
-                    <p class="lead">Tell us what you need. We match, forecast, and optimize—so you know exactly what to
-                        expect before you commit.</p>
+                    <span class="badge">How It Works</span>
+                    <h2>Prompt. Match. Predict. Activate.</h2>
+                    <p class="lead">Describe your campaign in plain language. NYRA finds the right voices, forecasts
+                        impact, and delivers pricing intelligence—before you commit a dollar.</p>
                 </div>
 
                 <div class="console-wrapper glass-dark">
                     <!-- Left: Menu -->
                     <div class="console-menu">
-                        <div class="menu-item active" data-id="prompt">
-                            <span class="icon">1</span>
+                        <div class="menu-item active" data-id="awareness">
+                            <span class="icon">📢</span>
                             <div class="meta">
-                                <h3>You Prompt</h3>
-                                <p>Share what you need.</p>
+                                <h3>Brand Awareness</h3>
+                                <p>Launch campaigns that stick.</p>
                             </div>
                         </div>
-                        <div class="menu-item" data-id="match">
-                            <span class="icon">2</span>
+                        <div class="menu-item" data-id="event">
+                            <span class="icon">🎯</span>
                             <div class="meta">
-                                <h3>We Match</h3>
-                                <p>Ranked by fit & authority.</p>
+                                <h3>Event Amplification</h3>
+                                <p>Fill seats, create buzz.</p>
                             </div>
                         </div>
-                        <div class="menu-item" data-id="interact">
-                            <span class="icon">3</span>
+                        <div class="menu-item" data-id="content">
+                            <span class="icon">📄</span>
                             <div class="meta">
-                                <h3>You Interact</h3>
-                                <p>Like, skip, or activate.</p>
+                                <h3>Content Distribution</h3>
+                                <p>Whitepapers, reports, research.</p>
                             </div>
                         </div>
-                        <div class="menu-item" data-id="adapt">
-                            <span class="icon">4</span>
+                        <div class="menu-item" data-id="thought">
+                            <span class="icon">💡</span>
                             <div class="meta">
-                                <h3>We Adapt</h3>
-                                <p>Real-time learning.</p>
+                                <h3>Thought Leadership</h3>
+                                <p>Own the conversation.</p>
                             </div>
                         </div>
                     </div>
