Content: Update footer tagline to emphasize influence intelligence layer

--- a/contact.html
+++ b/contact.html
@@ -187,8 +187,8 @@
                         <span class="logo-text">NYRA</span>
                         <span class="logo-tagline">Influencer Intelligence</span>
                     </div>
-                    <p class="brand-desc">The authority mapping engine for the B2B era. Predict impact, not just views.
-                    </p>
+                    <p class="brand-desc">The influence intelligence layer for B2B. Map authority, forecast impact, and
+                        activate the voices that move your market.</p>
                     <div class="social-links">
                         <a href="#" class="footer-social-btn">Li</a>
                         <a href="#" class="footer-social-btn">X</a>
