Content: Update Use Cases section with 10 comprehensive B2B campaign types

--- a/index.html
+++ b/index.html
@@ -256,29 +256,71 @@
                         <div class="menu-item active" data-id="awareness">
                             <span class="icon">📢</span>
                             <div class="meta">
-                                <h3>Brand Awareness</h3>
-                                <p>Launch campaigns that stick.</p>
+                                <h3>Awareness & Reach</h3>
+                                <p>Expand your audience.</p>
                             </div>
                         </div>
-                        <div class="menu-item" data-id="event">
-                            <span class="icon">🎯</span>
+                        <div class="menu-item" data-id="review">
+                            <span class="icon">⭐</span>
                             <div class="meta">
-                                <h3>Event Amplification</h3>
-                                <p>Fill seats, create buzz.</p>
+                                <h3>Product Review</h3>
+                                <p>Get industry validation.</p>
                             </div>
                         </div>
-                        <div class="menu-item" data-id="content">
-                            <span class="icon">📄</span>
+                        <div class="menu-item" data-id="sales">
+                            <span class="icon">🤝</span>
                             <div class="meta">
-                                <h3>Content Distribution</h3>
-                                <p>Whitepapers, reports, research.</p>
+                                <h3>Sales Partnership</h3>
+                                <p>Drive conversions.</p>
                             </div>
                         </div>
                         <div class="menu-item" data-id="thought">
                             <span class="icon">💡</span>
                             <div class="meta">
                                 <h3>Thought Leadership</h3>
-                                <p>Own the conversation.</p>
+                                <p>Position as expert.</p>
+                            </div>
+                        </div>
+                        <div class="menu-item" data-id="technical">
+                            <span class="icon">🔧</span>
+                            <div class="meta">
+                                <h3>Technical Trust</h3>
+                                <p>Build credibility.</p>
+                            </div>
+                        </div>
+                        <div class="menu-item" data-id="education">
+                            <span class="icon">📚</span>
+                            <div class="meta">
+                                <h3>Market Education</h3>
+                                <p>Educate your audience.</p>
+                            </div>
+                        </div>
+                        <div class="menu-item" data-id="whitepaper">
+                            <span class="icon">📄</span>
+                            <div class="meta">
+                                <h3>Whitepaper Collab</h3>
+                                <p>Create authority content.</p>
+                            </div>
+                        </div>
+                        <div class="menu-item" data-id="reputation">
+                            <span class="icon">🛡️</span>
+                            <div class="meta">
+                                <h3>Reputation Building</h3>
+                                <p>Enhance brand trust.</p>
+                            </div>
+                        </div>
+                        <div class="menu-item" data-id="affinity">
+                            <span class="icon">❤️</span>
+                            <div class="meta">
+                                <h3>Brand Affinity</h3>
+                                <p>Emotional connections.</p>
+                            </div>
+                        </div>
+                        <div class="menu-item" data-id="event">
+                            <span class="icon">🎯</span>
+                            <div class="meta">
+                                <h3>Event Amplification</h3>
+                                <p>Boost visibility.</p>
                             </div>
                         </div>
                     </div>
