Feat: Add mega menu with Products/Services, create API and Insights pages

--- a/post.html
+++ b/post.html
@@ -289,7 +289,33 @@
                 <span class="logo-tagline">Influencer Intelligence</span>
             </a>
             <nav class="nav-links">
-                <a href="/#solutions">Solutions</a>
+                <div class="nav-item-dropdown">
+                    <a href="/#solutions" class="nav-link-with-dropdown">Solutions <span
+                            class="dropdown-arrow">▼</span></a>
+                    <div class="mega-menu">
+                        <div class="mega-menu-content">
+                            <div class="mega-menu-section">
+                                <h4>Products</h4>
+                                <a href="/index.html" class="mega-menu-item">
+                                    <strong>NYRA Influence Intelligence</strong>
+                                    <p>Powered by The Authority Graph™</p>
+                                </a>
+                                <a href="/api.html" class="mega-menu-item">
+                                    <strong>API</strong>
+                                    <span class="coming-soon-badge">Coming Soon</span>
+                                    <p>Integrate influence intelligence into your platform</p>
+                                </a>
+                            </div>
+                            <div class="mega-menu-section">
+                                <h4>Services</h4>
+                                <a href="/insights.html" class="mega-menu-item">
+                                    <strong>Insights</strong>
+                                    <p>Monitoring, reporting & competitive intelligence</p>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <a href="/#use-cases">Use Cases</a>
                 <a href="/#faq">FAQ</a>
                 <a href="/contact.html">Contact</a>
