Content: Update all instances from 'Influencer Intelligence' to 'Influence Intelligence'

--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
         <div class="container">
             <a href="/index.html" class="logo" style="text-decoration: none;">
                 <span class="logo-text">NYRA</span>
-                <span class="logo-tagline">Influencer Intelligence</span>
+                <span class="logo-tagline">Influence Intelligence</span>
             </a>
             <nav class="nav-links">
                 <div class="nav-item-dropdown">
@@ -211,7 +211,7 @@
                 <div class="footer-brand">
                     <div class="logo">
                         <span class="logo-text">NYRA</span>
-                        <span class="logo-tagline">Influencer Intelligence</span>
+                        <span class="logo-tagline">Influence Intelligence</span>
                     </div>
                     <p class="brand-desc">The influence intelligence layer for B2B. Map authority, forecast impact, and
                         activate the voices that move your market.</p>
