Style: Update API to NYRA API and improve Coming Soon badge styling

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                     <p>Powered by The Authority Graph™</p>
                                 </a>
                                 <a href="/api.html" class="mega-menu-item">
-                                    <strong>API</strong>
+                                    <strong>NYRA API</strong>
                                     <span class="coming-soon-badge">Coming Soon</span>
                                     <p>Integrate influence intelligence into your platform</p>
                                 </a>
