Fix: Add padding to contact page hero and center navbar links properly to avoid overlap

--- a/post.html
+++ b/post.html
@@ -324,7 +324,7 @@
         </div>
     </header>
 
-    <main>
+    <main style="padding-top: 80px;">
         <article>
             <div class="container article-hero">
                 <span class="article-date">PRODUCT UPDATE • OCT 12, 2025</span>
