--- a/contact.html
+++ b/contact.html
@@ -75,9 +75,23 @@
             /* Dark mode map effect */
         }
 
+        .contact-hero {
+            padding: 140px 0 60px;
+            text-align: center;
+        }
+
+        .contact-hero h1 {
+            font-size: clamp(40px, 8vw, 64px);
+            margin-bottom: 20px;
+        }
+
         @media (max-width: 900px) {
             .contact-layout {
                 grid-template-columns: 1fr;
+            }
+
+            .contact-hero {
+                padding: 120px 0 40px;
             }
         }
     </style>
