--- a/post.html
+++ b/post.html
@@ -481,7 +481,7 @@
                     <div class="nav-col">
                         <h4>Company</h4>
                         <a href="#">About Us</a>
-                        <a href="#">Careers</a>
+                        <a href="/careers.html">Careers</a>
                         <a href="#">Blog</a>
                         <a href="mailto:olgu@usenyra.com">Contact</a>
                     </div>
