style: remove purple from fonts and borders in careers page

--- a/careers.html
+++ b/careers.html
@@ -66,7 +66,7 @@
         <section class="container" style="max-width: 1000px; text-align: center; padding: 80px 20px;">
             <span class="badge">Careers</span>
             <h1
-                style="font-size: 56px; margin: 24px 0; background: linear-gradient(135deg, #fff 0%, var(--secondary) 100%); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;">
+                style="font-size: 56px; margin: 24px 0; background: linear-gradient(135deg, #fff 0%, var(--primary) 100%); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;">
                 Build the Future of <span class="text-highlight">Influence</span></h1>
             <p class="lead" style="margin-bottom: 60px;">We're on a mission to map true authority and redefine how
                 influence is measured in the B2B era. Join us in building the world's most sophisticated semantic engine
@@ -75,7 +75,7 @@
             <div
                 style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 32px; margin-bottom: 80px; text-align: left;">
                 <div class="glass-dark"
-                    style="padding: 40px; border-radius: 24px; border-top: 1px solid rgba(112, 0, 255, 0.2);">
+                    style="padding: 40px; border-radius: 24px; border-top: 1px solid rgba(0, 240, 255, 0.1);">
                     <div style="font-size: 32px; margin-bottom: 20px;">🚀</div>
                     <h3 style="font-size: 22px; margin-bottom: 16px; color: #fff;">Ambitious Mission</h3>
                     <p style="color: var(--text-muted); line-height: 1.7;">We're solving one of the hardest problems in
@@ -83,7 +83,7 @@
                 </div>
 
                 <div class="glass-dark"
-                    style="padding: 40px; border-radius: 24px; border-top: 1px solid rgba(0, 240, 255, 0.2);">
+                    style="padding: 40px; border-radius: 24px; border-top: 1px solid rgba(0, 240, 255, 0.1);">
                     <div style="font-size: 32px; margin-bottom: 20px;">🧠</div>
                     <h3 style="font-size: 22px; margin-bottom: 16px; color: #fff;">Intellectual Rigor</h3>
                     <p style="color: var(--text-muted); line-height: 1.7;">Work at the intersection of graph theory,
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="glass-dark"
-                    style="padding: 40px; border-radius: 24px; border-top: 1px solid rgba(255, 46, 147, 0.2);">
+                    style="padding: 40px; border-radius: 24px; border-top: 1px solid rgba(0, 240, 255, 0.1);">
                     <div style="font-size: 32px; margin-bottom: 20px;">🌍</div>
                     <h3 style="font-size: 22px; margin-bottom: 16px; color: #fff;">Remote First</h3>
                     <p style="color: var(--text-muted); line-height: 1.7;">We're a global team of experts working
