feat: add breadcrumbs to inner pages

--- a/api.html
+++ b/api.html
@@ -64,6 +64,11 @@
 
     <main style="padding-top: 140px; min-height: 80vh;">
         <section class="container" style="max-width: 900px; text-align: center; padding: 80px 20px;">
+            <nav class="breadcrumbs" style="justify-content: center;">
+                <a href="/index.html">Home</a>
+                <span class="separator">/</span>
+                <span class="current">API</span>
+            </nav>
             <span class="badge"
                 style="background: rgba(255, 200, 0, 0.1); color: #ffc800; border-color: #ffc800;">Coming Soon</span>
             <h1
