--- a/careers.html
+++ b/careers.html
@@ -64,6 +64,11 @@
 
     <main style="padding-top: 140px; min-height: 80vh;">
         <section class="container" style="max-width: 1000px; text-align: center; padding: 80px 20px;">
+            <nav class="breadcrumbs" style="justify-content: center;">
+                <a href="/index.html">Home</a>
+                <span class="separator">/</span>
+                <span class="current">Careers</span>
+            </nav>
             <span class="badge">Careers</span>
             <h1
                 style="font-size: 56px; margin: 24px 0; background: linear-gradient(135deg, #fff 0%, var(--primary) 100%); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;">
