--- a/contact.html
+++ b/contact.html
@@ -142,6 +142,11 @@
 
     <main>
         <section class="container contact-hero">
+            <nav class="breadcrumbs" style="justify-content: center;">
+                <a href="/index.html">Home</a>
+                <span class="separator">/</span>
+                <span class="current">Contact</span>
+            </nav>
             <h1>Get in <span class="text-highlight">Touch</span></h1>
             <p class="lead">Ready to start predicting influence? We're here to help.</p>
         </section>
