--- a/post.html
+++ b/post.html
@@ -327,6 +327,11 @@
     <main style="padding-top: 80px;">
         <article>
             <div class="container article-hero">
+                <nav class="breadcrumbs">
+                    <a href="/index.html">Home</a>
+                    <span class="separator">/</span>
+                    <span class="current">Blog</span>
+                </nav>
                 <span class="article-date">PRODUCT UPDATE • OCT 12, 2025</span>
                 <h1>Introducing the <span class="text-highlight">Authority Graph™ 2.0</span></h1>
                 <p class="lead" style="max-width: 100%;">The first semantic engine capable of measuring true B2B
@@ -568,7 +573,7 @@
                     history.pushState(null, null, targetId);
                 }
             });
-        });
+       
     </script>
     <!-- WAITLIST MODAL -->
     <div class="modal-overlay" id="waitlist-modal">
