--- a/insights.html
+++ b/insights.html
@@ -65,6 +65,11 @@
     <main style="padding-top: 140px;">
         <!-- Hero Section -->
         <section class="container" style="max-width: 1000px; text-align: center; padding: 60px 20px 80px;">
+            <nav class="breadcrumbs" style="justify-content: center;">
+                <a href="/index.html">Home</a>
+                <span class="separator">/</span>
+                <span class="current">Insights</span>
+            </nav>
             <span class="badge">Services</span>
             <h1
                 style="font-size: 56px; margin: 24px 0; background: linear-gradient(135deg, #fff 0%, var(--primary) 100%); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;">
